# Android-Car-duino

./: .gitignore  README.md  add_remote_Autodrive.sh  pull_Autodrive.sh  push_Autodrive.sh  push_Autodrive_forced.sh
Include/: autodrive.hpp  birdseyetransformer.hpp  command.hpp  imageprocessor.hpp  lightnormalizer.hpp  line.hpp  maneuver.hpp  parking.hpp  roadfinder.hpp  roadfragmentbuilder.hpp  roadfragmentbuilder2.hpp  roadpiece.hpp  sensordata.h  sensordata.hpp  sensordata.hpp.orig  settings.hpp  util.hpp
Include/imageprocessor/: birdseyetransformer.hpp  command.hpp  imageprocessor.hpp  line.hpp  linefollower.hpp  linefollower.hpp.orig  roadbuilder.hpp  roadfinder.hpp  roadfollower.hpp  roadfragmentbuilder.hpp  roadfragmentbuilder2.hpp  roadline.hpp  roadlinebuilder.hpp  util.hpp
Sample/: CMakeLists.txt  main.cpp
app/: build.gradle  releasekey.jks
app/src/main/: AndroidManifest.xml
app/src/main/java/bluetootharduino/: BluetoothActivity.java  CameraActivity.java  Netstrings.java
app/src/main/jni/: Application.mk  AutodriveJavaFacade.cpp  Cpp.cpp
app/src/main/jni/Autodrive/: .gitignore
app/src/main/res/drawable-hdpi/: fading_background.xml  rectangle_buttons.xml  rounded_buttons.xml
app/src/main/res/layout/: advanced_settings.xml  bluetooth_activity.xml  camera_activity.xml  (+4 more)
bluetoothArduino/: .project  AndroidManifest.xml  project.properties
bluetoothArduino/res/layout/: camera_activity.xml
bluetoothArduino/res/menu/: main.xml
bluetoothArduino/src/: Netstrings.java
gradle/wrapper/: gradle-wrapper.properties
openCVLibrary2411/: build.gradle
(+50 files in other folders)
